remove gasLimit from delpoy config

--- a/packages/deploy/src/data/deploy/arbitrum-goerli/config.json
+++ b/packages/deploy/src/data/deploy/arbitrum-goerli/config.json
@@ -4,9 +4,7 @@
   },
   "connection": {
     "assertChainId": 421613,
-    "ethOptions": {
-      "gasLimit": 10000000
-    }
+    "ethOptions": {}
   },
   "tokens": [
     {
