--- a/packages/deploy/src/data/deploy/arbitrum-goerli/config.json
+++ b/packages/deploy/src/data/deploy/arbitrum-goerli/config.json
@@ -106,9 +106,9 @@
         "maxLeverage": "20",
         "swapFee": "0.1%",
         "fee": "2%",
-        "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
+        "priceAgoMC": "1 min",
         "positionMinAmount": "0.001",
         "quoteLimit": "100_000_000"
       }
@@ -122,9 +122,9 @@
         "maxLeverage": "20",
         "swapFee": "0.1%",
         "fee": "2%",
-        "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
+        "priceAgoMC": "1 min",
         "positionMinAmount": "0.001",
         "quoteLimit": "100_000_000"
       }
