--- a/packages/deploy/src/data/deploy/goerli/config.json
+++ b/packages/deploy/src/data/deploy/goerli/config.json
@@ -48,7 +48,7 @@
         "swapFee": "0.1%",
         "fee": "2%",
         "priceAgo": "15 min",
-        "positionSlippage": "2.0%",
+        "priceAgoMC": "1 min",
         "mcSlippage": "5.0%",
         "positionMinAmount": "0.001",
         "quoteLimit": "20000000"
