--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -25,7 +25,10 @@ jobs:
             yarn test
         - name: Build for testing uniswap mock
           run: |
-            cd packages/contracts-uniswap-mock
+            cd packages/common
+            yarn
+            yarn build
+            cd ../contracts-uniswap-mock
             yarn
             yarn test
         
