--- a/packages/deploy/src/data/deploy/examples/prod-config.json
+++ b/packages/deploy/src/data/deploy/examples/prod-config.json
@@ -56,9 +56,9 @@
         "recoveryMaxLeverage": "17",
         "swapFee": "0.1%",
         "fee": "2%",
-        "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
+        "priceAgoMC": "1 min",
         "positionMinAmount": "0.1",
         "quoteLimit": "123_456_789"
       }
