--- a/packages/deploy/src/data/deploy/polygon-mumbai/config.json
+++ b/packages/deploy/src/data/deploy/polygon-mumbai/config.json
@@ -33,6 +33,34 @@
       "name": "Matic",
       "symbol": "FMATIC",
       "decimals": 18
+    },
+    {
+      "type": "mintable",
+      "id": "wbtc",
+      "symbol": "WBTC",
+      "name": "Wrapped BTC",
+      "decimals": 8
+    },
+    {
+      "type": "mintable",
+      "id": "link",
+      "symbol": "LINK",
+      "name": "ChainLink Token",
+      "decimals": 18
+    },
+    {
+      "type": "mintable",
+      "id": "gns",
+      "symbol": "GNS",
+      "name": "Gains Network",
+      "decimals": 18
+    },
+    {
+      "type": "mintable",
+      "id": "voxel",
+      "symbol": "VOXEL",
+      "name": "VOXEL Token",
+      "decimals": 18
     }
   ],
   "prices": [
@@ -61,6 +89,58 @@
           "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=USDCUSDT).price"
         }
       ]
+    },
+    {
+      "id": "btc-usdc",
+      "label": "btc/usdc",
+      "type": "http-get",
+      "direction": "forward",
+      "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=BTCUSDC).price"
+    },
+    {
+      "id": "link-usdc",
+      "label": "link/usdc",
+      "type": "http-get",
+      "direction": "forward",
+      "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=LINKUSDC).price"
+    },
+    {
+      "id": "gns-matic",
+      "label": "gns/matic",
+      "type": "composite",
+      "sources": [
+        {
+          "type": "http-get",
+          "label": "gns/usdt",
+          "direction": "forward",
+          "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=GNSUSDT).price"
+        },
+        {
+          "type": "http-get",
+          "label": "matic/usdt",
+          "direction": "backward",
+          "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=MATICUSDT).price"
+        }
+      ]
+    },
+    {
+      "id": "voxel-matic",
+      "label": "voxel/matic",
+      "type": "composite",
+      "sources": [
+        {
+          "type": "http-get",
+          "label": "voxel/usdt",
+          "direction": "forward",
+          "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=VOXELUSDT).price"
+        },
+        {
+          "type": "http-get",
+          "label": "matic/usdt",
+          "direction": "backward",
+          "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=MATICUSDT).price"
+        }
+      ]
     }
   ],
   "uniswap": {
@@ -73,7 +153,7 @@
         "id": "fweth-usdc",
         "tokenAId": "fweth",
         "tokenBId": "usdc",
-        "fee": "0.05%",
+        "fee": "0.1%",
         "tokenABalance": "1_000_000",
         "tokenBBalance": "2_000_000_000",
         "priceId": "eth-usdc",
@@ -83,11 +163,51 @@
         "id": "fmatic-usdc",
         "tokenAId": "fmatic",
         "tokenBId": "usdc",
-        "fee": "0.05%",
+        "fee": "0.1%",
         "tokenABalance": "4_000_000",
         "tokenBBalance": "3_200_000",
         "priceId": "matic-usdc",
         "priceBaseTokenId": "fmatic"
+      },
+      {
+        "id": "wbtc-usdc",
+        "tokenAId": "wbtc",
+        "tokenBId": "usdc",
+        "fee": "0.1%",
+        "tokenABalance": "1_000_000",
+        "tokenBBalance": "1_000_000_000",
+        "priceId": "btc-usdc",
+        "priceBaseTokenId": "wbtc"
+      },
+      {
+        "id": "link-usdc",
+        "tokenAId": "link",
+        "tokenBId": "usdc",
+        "fee": "0.3%",
+        "tokenABalance": "4_000_000",
+        "tokenBBalance": "3_200_000",
+        "priceId": "link-usdc",
+        "priceBaseTokenId": "link"
+      },
+      {
+        "id": "gns-fmatic",
+        "tokenAId": "gns",
+        "tokenBId": "fmatic",
+        "fee": "0.3%",
+        "tokenABalance": "4_000_000",
+        "tokenBBalance": "4_000_000",
+        "priceId": "gns-matic",
+        "priceBaseTokenId": "gns"
+      },
+      {
+        "id": "voxel-fmatic",
+        "tokenAId": "voxel",
+        "tokenBId": "fmatic",
+        "fee": "0.3%",
+        "tokenABalance": "2_000_000",
+        "tokenBBalance": "5_000_000",
+        "priceId": "voxel-matic",
+        "priceBaseTokenId": "voxel"
       }
     ]
   },
@@ -104,12 +224,11 @@
       "params": {
         "interestRate": "5.4%",
         "maxLeverage": "20",
-        "recoveryMaxLeverage": "17",
         "swapFee": "0.1%",
         "fee": "2%",
-        "positionSlippage": "2.0%",
-        "mcSlippage": "5.0%",
+        "mcSlippage": "1.0%",
         "priceAgo": "15 min",
+        "priceAgoMC": "10 sec",
         "positionMinAmount": "0.001",
         "quoteLimit": "100_000_000"
       }
@@ -121,18 +240,118 @@
       "params": {
         "interestRate": "5.4%",
         "maxLeverage": "20",
-        "recoveryMaxLeverage": "17",
         "swapFee": "0.1%",
         "fee": "2%",
-        "mcSlippage": "5.0%",
+        "mcSlippage": "1.0%",
         "priceAgo": "15 min",
-        "priceAgoMC": "1 min",
-        "positionMinAmount": "0.001",
+        "priceAgoMC": "10 sec",
+        "positionMinAmount": "1",
+        "quoteLimit": "100_000_000"
+      }
+    },
+    {
+      "id": "wbtc-usdc",
+      "uniswapPoolId": "wbtc-usdc",
+      "baseTokenId": "wbtc",
+      "params": {
+        "interestRate": "5.4%",
+        "maxLeverage": "20",
+        "swapFee": "0.1%",
+        "fee": "2%",
+        "mcSlippage": "1.0%",
+        "priceAgo": "15 min",
+        "priceAgoMC": "10 sec",
+        "positionMinAmount": "0.0001",
+        "quoteLimit": "100_000_000"
+      }
+    },
+    {
+      "id": "link-usdc",
+      "uniswapPoolId": "link-usdc",
+      "baseTokenId": "link",
+      "params": {
+        "interestRate": "9.6%",
+        "maxLeverage": "10",
+        "swapFee": "0.1%",
+        "fee": "2%",
+        "mcSlippage": "1.0%",
+        "priceAgo": "15 min",
+        "priceAgoMC": "10 sec",
+        "positionMinAmount": "0.1",
+        "quoteLimit": "100_000_000"
+      }
+    },
+    {
+      "id": "gns-fmatic",
+      "uniswapPoolId": "gns-fmatic",
+      "baseTokenId": "gns",
+      "params": {
+        "interestRate": "9.6%",
+        "maxLeverage": "10",
+        "swapFee": "0.1%",
+        "fee": "2%",
+        "mcSlippage": "1.0%",
+        "priceAgo": "15 min",
+        "priceAgoMC": "10 sec",
+        "positionMinAmount": "1",
+        "quoteLimit": "100_000_000"
+      }
+    },
+    {
+      "id": "voxel-fmatic",
+      "uniswapPoolId": "voxel-fmatic",
+      "baseTokenId": "voxel",
+      "params": {
+        "interestRate": "9.6%",
+        "maxLeverage": "5",
+        "swapFee": "0.1%",
+        "fee": "2%",
+        "mcSlippage": "1.0%",
+        "priceAgo": "15 min",
+        "priceAgoMC": "10 sec",
+        "positionMinAmount": "10",
         "quoteLimit": "100_000_000"
       }
     }
   ],
-  "routerPools": [],
+  "adapters": [
+    {
+      "dexId": 0,
+      "adapterName": "UniswapV3Adapter",
+      "pools": [
+        {
+          "tokenAId": "fweth",
+          "tokenBId": "usdc",
+          "poolAddress": "0xcAB923F8F3D71c9C092582927a18DCe42027737f"
+        },
+        {
+          "tokenAId": "fmatic",
+          "tokenBId": "usdc",
+          "poolAddress": "0x9B791D05a4900bC70789d7A24a9EEe9D2182fBed"
+        },
+        {
+          "tokenAId": "wbtc",
+          "tokenBId": "usdc",
+          "poolAddress": "0xD3a094794936C8c0669f80ad957b76F677b1181f"
+        },
+        {
+          "tokenAId": "link",
+          "tokenBId": "usdc",
+          "poolAddress": "0x9623b597c87ac280285e8c29B9Ce7e58B3513328"
+        },
+        {
+          "tokenAId": "gns",
+          "tokenBId": "fmatic",
+          "poolAddress": "0xBB8AEec4998e461AB6c67Dc19eF8b8be4f723D8f"
+        },
+        {
+          "tokenAId": "voxel",
+          "tokenBId": "fmatic",
+          "poolAddress": "0xf6E095dCeA3d1483105F37c5611FDcC838Fe448C"
+        }
+      ]
+    }
+  ],
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
       "address": "0xeb7A892BB04A8f836bDEeBbf60897A7Af1Bf5d7F"
