--- a/packages/oracle/config.json
+++ b/packages/oracle/config.json
@@ -137,6 +137,51 @@
             "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=USDCUSDT).price"
           }
         ]
+      },
+      {
+        "id": "link-usdc",
+        "label": "link/usdc",
+        "type": "http-get",
+        "direction": "forward",
+        "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=LINKUSDC).price"
+      },
+      {
+        "id": "gns-matic",
+        "label": "gns/matic",
+        "type": "composite",
+        "sources": [
+          {
+            "type": "http-get",
+            "label": "gns/usdt",
+            "direction": "forward",
+            "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=GNSUSDT).price"
+          },
+          {
+            "type": "http-get",
+            "label": "matic/usdt",
+            "direction": "backward",
+            "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=MATICUSDT).price"
+          }
+        ]
+      },
+      {
+        "id": "voxel-matic",
+        "label": "voxel/matic",
+        "type": "composite",
+        "sources": [
+          {
+            "type": "http-get",
+            "label": "voxel/usdt",
+            "direction": "forward",
+            "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=VOXELUSDT).price"
+          },
+          {
+            "type": "http-get",
+            "label": "matic/usdt",
+            "direction": "backward",
+            "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=MATICUSDT).price"
+          }
+        ]
       }
     ]
   },
@@ -237,35 +282,83 @@
       "tokens": [
         {
           "id": "fweth",
-          "address": "0x230f4447F79DC52a5Bc8031Dfdd49da6929Ca290",
+          "address": "0x965D0A2460417C6f16777D268c6597e401084bed",
           "assertSymbol": "FWETH",
           "assertDecimals": 18
         },
         {
           "id": "usdc",
-          "address": "0x33544752A157AeE7e78AD83DC61E95EF7aAe52a1",
+          "address": "0x14d3Bf23863532B39BD28844B478cAd01d480202",
           "assertSymbol": "USDC",
           "assertDecimals": 6
         },
         {
           "id": "fmatic",
-          "address": "0x6ea7a8FecbFf190D6B504263BDD81b7F2B07700A",
+          "address": "0x0d2b51ef0B6130892200F9a4771Af6D44Ea81fc2",
           "assertSymbol": "FMATIC",
+          "assertDecimals": 18
+        },
+        {
+          "id": "wbtc",
+          "address": "0xf7c77Fa2f4A1882f24941B82559e92c06Bb086C7",
+          "assertSymbol": "WBTC",
+          "assertDecimals": 8
+        },
+        {
+          "id": "link",
+          "address": "0x6c34183A2CaE7c262aA0d0d8a391Fd705cB4AfAc",
+          "symbol": "LINK",
+          "assertDecimals": 18
+        },
+        {
+          "id": "gns",
+          "address": "0x82AA9e3C45b22106Dde6F5D93CF62220248c0bEC",
+          "assertSymbol": "GNS",
+          "assertDecimals": 18
+        },
+        {
+          "id": "voxel",
+          "address": "0x95Ce1213835EcBb105D8C1797801777a16425338",
+          "assertSymbol": "VOXEL",
           "assertDecimals": 18
         }
       ],
       "uniswapV3PoolMocks": [
         {
           "id": "fweth-usdc",
-          "address": "0x64BF3213666bC357155DDb21aD2404d3Df04e0A1",
+          "address": "0xcAB923F8F3D71c9C092582927a18DCe42027737f",
           "priceId": "eth-usdc",
           "priceBaseTokenId": "fweth"
         },
         {
           "id": "fmatic-usdc",
-          "address": "0xC931D0D6BDCc8b264983533a58ED80F1a3b99ef7",
+          "address": "0x9B791D05a4900bC70789d7A24a9EEe9D2182fBed",
           "priceId": "matic-usdc",
           "priceBaseTokenId": "fmatic"
+        },
+        {
+          "id": "wbtc-usdc",
+          "address": "0xD3a094794936C8c0669f80ad957b76F677b1181f",
+          "priceId": "btc-usdc",
+          "priceBaseTokenId": "wbtc"
+        },
+        {
+          "id": "link-usdc",
+          "address": "0x9623b597c87ac280285e8c29B9Ce7e58B3513328",
+          "priceId": "link-usdc",
+          "priceBaseTokenId": "link"
+        },
+        {
+          "id": "gns-fmatic",
+          "address": "0xBB8AEec4998e461AB6c67Dc19eF8b8be4f723D8f",
+          "priceId": "gns-matic",
+          "priceBaseTokenId": "gns"
+        },
+        {
+          "id": "voxel-fmatic",
+          "address": "0xf6E095dCeA3d1483105F37c5611FDcC838Fe448C",
+          "priceId": "voxel-matic",
+          "priceBaseTokenId": "voxel"
         }
       ],
       "updatePriceJobs": [
@@ -275,6 +368,22 @@
         },
         {
           "poolMockId": "fmatic-usdc",
+          "periodMs": 60000
+        },
+        {
+          "poolMockId": "wbtc-usdc",
+          "periodMs": 60000
+        },
+        {
+          "poolMockId": "link-usdc",
+          "periodMs": 60000
+        },
+        {
+          "poolMockId": "gns-fmatic",
+          "periodMs": 60000
+        },
+        {
+          "poolMockId": "voxel-fmatic",
           "periodMs": 60000
         }
       ]
