--- a/packages/periphery/package.json
+++ b/packages/periphery/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "compile": "hardhat compile",
     "test": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat test ./test/*.spec.ts",
-    "lint:write": "prettier --write ./contracts"
+    "lint:write": "prettier --write ./contracts",
+    "docgen": "hardhat docgen"
   },
   "author": "EqLab",
   "devDependencies": {
@@ -45,6 +46,7 @@
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "solidity-docgen": "^0.6.0-beta.36"
   }
 }
