--- a/packages/oracle/config.json
+++ b/packages/oracle/config.json
@@ -209,7 +209,7 @@
         {
           "id": "btc-usdc",
           "address": "0x27410978DC2E0271B618e8131E512B826bFe4753",
-          "priceId": "arb-usdc",
+          "priceId": "btc-usdc",
           "priceBaseTokenId": "btc"
         },
         {
