--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "prettier": "^2.8.2",
     "prettier-plugin-solidity": "1.0.0",
     "typescript": "^4.9.4"
+  },
+  "resolutions": {
+    "@matterlabs/hardhat-zksync-deploy/ethers": "^5.7.2"
   }
 }
