--- a/packages/sbt/package.json
+++ b/packages/sbt/package.json
@@ -9,38 +9,39 @@
   },
   "scripts": {
     "build": "tsc --build",
-    "compile": "hardhat compile && ts-node generate-error-codes.ts",
+    "compile:arb:testnet": "hardhat compile --network arbitrum-testnet",
+    "compile:zks:testnet": "hardhat compile --network zk-sync-testnet",
     "test": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat test ./test/*.spec.ts",
-    "lint:write": "prettier --write ./contracts"
+    "lint:write": "prettier --write ./contracts",
+    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
   },
   "author": "EqLab",
   "devDependencies": {
-    "@marginly/deploy": "0.1.0",
-    "@marginly/common": "0.1.0",
-    "@aave/core-v3": "1.17.2",
-    "@ethersproject/abi": "^5.7.0",
-    "@ethersproject/providers": "^5.7.2",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
+    "@matterlabs/hardhat-zksync-deploy": "^0.6.5",
+    "@matterlabs/hardhat-zksync-solc": "^0.4.2",
+    "@matterlabs/hardhat-zksync-verify": "^0.2.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.4",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.2.2",
-    "@nomiclabs/hardhat-etherscan": "^3.1.5",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.0.1",
     "@openzeppelin/contracts": "^4.8.0",
-    "@typechain/ethers-v5": "^10.2.0",
-    "@typechain/hardhat": "^6.1.5",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^8.0.0",
     "@types/jest": "^29.2.5",
     "@types/mocha": "^10.0.1",
-    "mocha-chai-jest-snapshot": "^1.1.4",
-    "chai": "^4.3.7",
-    "ethers": "^5.7.2",
+    "chai": "^4.3.10",
+    "cross-env": "^7.0.3",
+    "ethers": "^6.7.1",
     "hardhat": "^2.12.6",
     "hardhat-contract-sizer": "^2.6.1",
+    "hardhat-deploy": "^0.11.37",
     "hardhat-gas-reporter": "^1.0.9",
     "solhint": "3.3.7",
     "solhint-plugin-prettier": "0.0.5",
-    "solidity-coverage": "^0.8.2",
+    "solidity-coverage": "^0.8.5",
     "ts-node": "^10.9.1",
-    "typechain": "^8.1.1",
+    "typechain": "^8.3.1",
     "typescript": "^4.9.4"
   }
 }
