--- a/packages/sbt/tsconfig.json
+++ b/packages/sbt/tsconfig.json
@@ -4,13 +4,10 @@
     "outDir": "dist",
     "declaration": true,
     "composite": true,
-    "rootDir": "src",
     "resolveJsonModule": true
   },
   "include": [
-    "src/*",
-    "src/*.json",
-    "src/*/*",
-    "src/*/*.json"
+    "scripts/**/*",
+    "typechain-types/**/*"
   ],
 }
