added docker file and missed dependencies

--- a/packages/keeper/package.json
+++ b/packages/keeper/package.json
@@ -14,9 +14,11 @@
   "author": "EqLab",
   "license": "MIT",
   "dependencies": {
-    "@marginly/contracts":"0.1.0",
+    "@marginly/contracts": "0.1.0",
     "@marginly/common": "0.1.0",
     "@marginly/cli-common": "0.1.0",
+    "@marginly/logger": "^1.0.0",
+    "@marginly/logger-node": "^1.0.0",
     "commander": "^8.1.0",
     "ethers": "^5.7.2"
   },
