--- a/packages/keeper/tsconfig.json
+++ b/packages/keeper/tsconfig.json
@@ -10,7 +10,12 @@
       },
       {
         "path": "../cli-common"
+      },
+      {
+        "path": "../logger"
+      },
+      {
+        "path": "../logger-node"
       }
     ]
   }
-  
