--- a/packages/cli-common/package.json
+++ b/packages/cli-common/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@marginly/common": "0.1.0",
+    "@openzeppelin/contracts": "^4.8.0",
+    "@ethersproject/hardware-wallets": "^5.6.0",
     "ethers": "^5.7.2",
     "fs-extra": "^11.1.0",
     "commander": "^8.1.0",
