chore: comment admin contract deploy

--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -23,6 +23,7 @@
     "@aave/core-v3": "1.17.2",
     "@marginly/contracts": "0.1.0",
     "@marginly/contracts-uniswap-mock": "0.1.0",
+    "@marginly/periphery": "0.1.0",
     "@marginly/common": "0.1.0",
     "@marginly/logger": "1.0.0",
     "@uniswap/v3-core": "^1.0.1",
