feat: mockAave, keeper config for testnets

--- a/packages/deploy/src/data/deploy/arbitrum-goerli/config.json
+++ b/packages/deploy/src/data/deploy/arbitrum-goerli/config.json
@@ -335,7 +335,7 @@
   ],
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
-      "address": "0x4EEE0BB72C2717310318f27628B3c8a708E4951C"
+      "allowCreateMock": "true"
     }
   }
 }
