--- a/packages/keeper/Dockerfile
+++ b/packages/keeper/Dockerfile
@@ -22,8 +22,7 @@ COPY --chown=node:node --from=build ["/usr/src/app/packages/keeper/dist", "packa
 COPY --chown=node:node --from=build ["/usr/src/app/packages/keeper/package.json", "./packages/keeper/"]
 
 # Networ configs
-COPY --chown=node:node --from=build ["/usr/src/app/packages/keeper/config.arbitrum-one.json", "./packages/keeper/"]
-COPY --chown=node:node --from=build ["/usr/src/app/packages/keeper/config.arbitrum-goerli.json", "./packages/keeper/"]
+COPY --chown=node:node --from=build ["/usr/src/app/packages/keeper/config/", "./packages/keeper/"]
 
 COPY --chown=node:node --from=build ["/usr/src/app/packages/logger/dist", "packages/logger/dist/"]
 COPY --chown=node:node --from=build ["/usr/src/app/packages/logger/package.json", "./packages/logger/"]
