--- a/packages/keeper/config/config.arbitrum-one.json
+++ b/packages/keeper/config/config.arbitrum-one.json
@@ -3,7 +3,9 @@
     "ethNodeUri": "https://arb1.arbitrum.io/rpc"
   },
   "connection": {
-    "ethOptions": {}
+    "ethOptions": {
+      "gasLimit": 900000
+    }
   },
   "marginlyKeeperAddress": "0x193E76C78e1c02BF35c1F789Ce2a1aE39F865629",
   "marginlyPools": [
