--- a/.github/workflows/unit-tests-uniswap.yml
+++ b/.github/workflows/unit-tests-uniswap.yml
@@ -1,9 +1,11 @@
-name: Unit tests
+name: Unit tests uniswap mock
 on:
   push:
   pull_request:
   workflow_dispatch:
-
+  paths:
+    - packages/common
+    - packages/contracts-uniswap-mock
 jobs:
     unit_tests:
         runs-on: ubuntu-latest
@@ -13,16 +15,6 @@ jobs:
           uses: actions/setup-node@v3
           with:
             node-version: 18.14.2
-        - name: Build for testing contracts
-          run: |
-            cd packages/contracts
-            yarn
-            yarn test
-        - name: Build for testing router
-          run: |
-            cd packages/router
-            yarn
-            yarn test
         - name: Build for testing uniswap mock
           run: |
             cd packages/common
@@ -31,10 +23,3 @@ jobs:
             cd ../contracts-uniswap-mock
             yarn
             yarn test
-        - name: Build for testing periphery
-          run: |
-            cd packages/periphery
-            yarn
-            yarn test
-            
-        
