--- a/packages/periphery/package.json
+++ b/packages/periphery/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "compile": "hardhat compile",
-    "test": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat test ./test/PriceAdapter.spec.ts",
+    "test": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat test ./test/*.spec.ts",
     "lint:write": "prettier --write ./contracts",
     "docgen": "hardhat docgen"
   },
