--- a/.github/workflows/unit-tests-contracts.yml
+++ b/.github/workflows/unit-tests-contracts.yml
@@ -1,10 +1,14 @@
 name: Unit tests contracts
 on:
   push:
+    paths:
+      - 'packages/contracts/**'
   pull_request:
+    paths:
+      - 'packages/contracts/**'
   workflow_dispatch:
-  paths:
-    - packages/contracts
+    paths:
+      - 'packages/contracts/**'
 jobs:
     unit_tests:
         runs-on: ubuntu-latest
