--- a/.github/workflows/unit-tests-router.yml
+++ b/.github/workflows/unit-tests-router.yml
@@ -1,10 +1,14 @@
 name: Unit tests router
 on:
   push:
+    paths:
+      - 'packages/router/**'
   pull_request:
+    paths:
+      - 'packages/router/**'
   workflow_dispatch:
-  paths:
-    - packages/router
+    paths:
+      - 'packages/router/**'
 jobs:
     unit_tests:
         runs-on: ubuntu-latest
