--- a/.github/workflows/unit-tests-uniswap.yml
+++ b/.github/workflows/unit-tests-uniswap.yml
@@ -3,29 +3,29 @@ on:
   push:
     paths:
       - 'packages/common/**'
-      - 'packages/contracts-uniswap-mock'
+      - 'packages/contracts-uniswap-mock/**'
   pull_request:
     paths:
       - 'packages/common/**'
-      - 'packages/contracts-uniswap-mock'
+      - 'packages/contracts-uniswap-mock/**'
   workflow_dispatch:
     paths:
       - 'packages/common/**'
-      - 'packages/contracts-uniswap-mock'
+      - 'packages/contracts-uniswap-mock/**'
 jobs:
-    unit_tests:
-        runs-on: ubuntu-latest
-        steps:
-        - uses: actions/checkout@v3
-        - name: Use Node.js 18.14.2
-          uses: actions/setup-node@v3
-          with:
-            node-version: 18.14.2
-        - name: Build for testing uniswap mock
-          run: |
-            cd packages/common
-            yarn
-            yarn build
-            cd ../contracts-uniswap-mock
-            yarn
-            yarn test
+  unit_tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js 18.14.2
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.14.2
+      - name: Build for testing uniswap mock
+        run: |
+          cd packages/common
+          yarn
+          yarn build
+          cd ../contracts-uniswap-mock
+          yarn
+          yarn test
