--- a/.github/workflows/unit-tests-periphery.yml
+++ b/.github/workflows/unit-tests-periphery.yml
@@ -20,8 +20,12 @@ jobs:
         node-version: 18.14.2
     - name: Build for testing periphery
       run: |
-        cd packages/periphery
+        cd packages/contracts
         yarn
+        yarn compile
+        cd ../router
+        yarn compile
+        cd ../periphery
         yarn test
         
     
