--- a/packages/periphery/package.json
+++ b/packages/periphery/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "compile": "hardhat compile",
     "test": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat test ./test/*.spec.ts",
+    "test:coverage": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat coverage  --testfiles './test/*.spec.ts'",
     "lint:write": "prettier --write ./contracts ./test",
     "docgen": "hardhat docgen"
   },
