--- a/packages/deploy/src/data/deploy/arbitrum-goerli-v1.5/config.json
+++ b/packages/deploy/src/data/deploy/arbitrum-goerli-v1.5/config.json
@@ -94,6 +94,16 @@
         "tokenBBalance": "2_000_000_000_000",
         "priceId": "eth-usdc",
         "priceBaseTokenId": "fweth"
+      },
+      {
+        "id": "wbtc-usdc",
+        "tokenAId": "wbtc",
+        "tokenBId": "usdc",
+        "fee": "0.1%",
+        "tokenABalance": "8_000_000",
+        "tokenBBalance": "2_000_000_000_000",
+        "priceId": "btc-usdc",
+        "priceBaseTokenId": "wbtc"
       }
     ]
   },
@@ -105,9 +115,24 @@
         {
           "quoteTokenId": "usdc",
           "baseTokenId": "fweth",
-          "priceSecondsAgo": "5 sec",
-          "priceSecondsAgoMC": "5 sec",
+          "secondsAgo": "5 sec",
+          "secondsAgoLiquidation": "5 sec",
           "uniswapFee": "0.1%"
+        }
+      ]
+    },
+    {
+      "id": "uniswapV3TickDoubleOracle-2",
+      "type": "uniswapV3Double",
+      "settings": [
+        {
+          "quoteTokenId": "fweth",
+          "baseTokenId": "wbtc",
+          "intermediateTokenId": "usdc",
+          "secondsAgo": "5 sec",
+          "secondsAgoLiquidation": "5 sec",
+          "baseTokenPairFee": "0.1%",
+          "quoteTokenPairFee": "0.1%"
         }
       ]
     }
