--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -25,7 +25,26 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tests: [short, long, longAndShort, shortIncome, longIncome, simulation1, simulation2, simulation3, longEmergency, shortEmergency, keeper, balanceSync, balanceSyncWithdrawBase, balanceSyncWithdrawQuote, routerSwaps, routerMultipleSwaps]
+        tests:
+          [
+            short,
+            long,
+            longAndShort,
+            shortIncome,
+            longIncome,
+            simulation1,
+            simulation2,
+            simulation3,
+            longEmergency,
+            shortEmergency,
+            keeperAave,
+            keeperUniswapV3,
+            balanceSync,
+            balanceSyncWithdrawBase,
+            balanceSyncWithdrawQuote,
+            routerSwaps,
+            routerMultipleSwaps,
+          ]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js 18.14.2
